tests/snapshots/runtime_error_fixtures/runtime_trace_error.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/runtime_trace_error.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 12] Compiling  Assert
[ 2 of 12] Compiling  Debug
[ 3 of 12] Compiling  Array
[ 4 of 12] Compiling  List
[ 5 of 12] Compiling  Either
[ 6 of 12] Compiling  IO
[ 7 of 12] Compiling  Math
[ 8 of 12] Compiling  Numeric
[ 9 of 12] Compiling  Option
[10 of 12] Compiling  Primops
[11 of 12] Compiling  String
• 1 error • examples/runtime_errors/runtime_trace_error.flx
error[E300]: Type Mismatch

I found a type mismatch.

  examples/runtime_errors/runtime_trace_error.flx:3:3
  |
3 |   1 + None;
  |   ^^^^^^^^
  |   -------- this expression has type `Option<_>`

  |   -------- this type mismatch is reported here

Note:
  expected type: Int
  found type: Option<_>
  the conflicting types meet at this expression

Help:
  This value might be `None`. Use `match` to unwrap it before using it here.
